--- a/Exercici 1/css/styles.css
+++ b/Exercici 1/css/styles.css
@@ -1,22 +1,32 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
-    max-width: 1000px;
-    margin-left: auto;
-    margin-right: auto;
-    padding-top: 20px;
+    height: 100vh;
+    padding: 15px 0;
+    margin: 0;
+}
+
+.container {
+  width: 80%;
+  height: 100%;
+  margin: 0 auto;
 }
 
 header {
     width: 100%;
-    height: 80px;
+    height: 10%;
     background-color: #4b4b4d;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
 }
 
 h1 {
     background-color: #d2d3d5;
-    height: 50px;
+    height: 50%;
     width: 200px;
     margin: 15px;
 }
@@ -24,12 +34,11 @@ h1 {
 nav {
     display: flex;
     flex-direction: row;
-    margin: 20 0 0 20px;
 }
 
 nav a {
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: 30px;
     background-color: #d2d3d5;
     border-radius: 50%;
     margin: 0 10 10 0;
@@ -38,7 +47,7 @@ nav a {
 }
 
 section.top {
-    height: 48px;
+    height: 5%;
     width: 100%;
     margin-top: 24px;
     margin-bottom: 24px;
@@ -49,12 +58,13 @@ section.top {
 
 section.top div.topbox{
     background-color: #97989A;
-    width: 196px;
+    width: 19.5%;
     height: 100%;
+
 }
 
 section.middle {
-    height: 192px;
+    height: 20%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -62,7 +72,7 @@ section.middle {
 
 section.middle div.middlebox{
     background-color: #97989A;
-    width: 328px;
+    width: 33%;
     height: 100%;
 }
 
@@ -70,7 +80,7 @@ section.bottom {
     margin-top: 24px;
     margin-bottom: 24px;
     width: 100%;
-    height: 455px;
+    height: 45%;
     display: grid;
     grid-template: 25% 1fr 25%;
 }
@@ -101,6 +111,6 @@ section.bottom  div.right-side {
 
 footer {
     width: 100%;
-    height: 70px;
+    height: 10%;
     background-color: #4b4b4d;
 }
