--- a/Exercici 2/css/styles.css
+++ b/Exercici 2/css/styles.css
@@ -1,26 +1,42 @@
 @import url('https://fonts.googleapis.com/css2?family=Epilogue:wght@300;500&display=swap');
 
+
 body {
     font-family: 'Epilogue', sans-serif;
     font-weight: 300;
     line-height: 1.5;
 
     background-color: #ffffff;
-	color: #333333;
-	margin: 0px auto 40px auto;
-    padding-top: 20px;
-    width: 1000px;
+	  color: #333333;
 }
+
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+    height: 100vh;
+    padding: 15px 0;
+    margin: 0;
+}
+
+.container {
+  width: 80%;
+  height: 100%;
+  margin: 0 auto;
+}
+
 
 /* Tipografía */
 h1, h2, h3 {
     font-weight: 500;
     text-transform: capitalize;
 }
- 
+
 h1 {
     font-size: 36px;
-    
+
 }
 
 h2 {
@@ -31,9 +47,11 @@ h3 {
     font-size: 18px;
 }
 
+/* header */
+
 header {
     width: 100%;
-    height: 80px;
+    height: 10%;
     background: url(https://source.unsplash.com/AtPWnYNDJnM/960x540);
     background-size: cover;
     display: flex;
@@ -44,7 +62,6 @@ header {
 
 h1 {
     color:#fff;
-    height: 50px;
     width: 200px;
     margin: 15px;
 }
@@ -65,45 +82,50 @@ nav a {
     align-items: center;
 }
 
+/* menu pages */
+
 section.top {
-    height: 48px;
+    height: 6%;
     width: 100%;
     margin-top: 24px;
     margin-bottom: 24px;
+
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
 }
 
 section.top div.topbox{
     border:#000 1px solid;
-    width: 196px;
+    width: 19.5%;
     height: 100%;
     display: grid;
     place-items: center;
     cursor: pointer;
 }
 
+/* gilms showing */
+
 section.middle {
-    height: 192px;
+    height: 24%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
 
-section.middle div.middlebox{
+section.middle div.middlebox {
     background-color: #97989A;
-    width: 328px;
-    height: 100%;
-    display: grid;
-    place-items: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     position:relative;
 }
 
 section.middle div.middlebox img {
     object-fit: cover;
-    width: 328px;
-    height: 192px;
+    width: 100%;
+    height: 100%;
 }
 
 section.middle div.middlebox div{
@@ -114,7 +136,7 @@ section.middle div.middlebox div{
     align-items: center;
     background-color: rgba(0, 0, 0, 0.4);
     width: 60%;
-    height:70%;
+    max-height:60%;
 }
 
 section.middle div.middlebox h2,
@@ -132,34 +154,37 @@ div.middlebox button {
 
 
 section.bottom {
-    margin-top: 24px;
-    margin-bottom: 24px;
-    width: 100%;
-    display: grid;
-    grid-template: 25% 1fr 25%;
+  margin-top: 24px;
+  margin-bottom: 24px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  height: 50%;
 }
 
 
-section.bottom div.left-side {
-    grid-column: 1 / 1;
+
+
+section.bottom div.left-side,
+section.bottom  div.right-side {
     background-color: #858688;
     height: 100%;
-    width: 100%;
-    min-width: 190px;
+    width: 30%;
+
   }
 
   section.bottom  div.main {
-    grid-column: 2 / 5;
-    min-width: 620px;
     height: 100%;
-    width: 100%;
+    width: auto;
     display: flex;
     flex-wrap: wrap;
   }
 
   section.bottom  div.main article {
       padding: 0 5px 5px 5px;
-      flex: 0 1 300px;
+      flex: 1 1 150px;
   }
   section.bottom  div.main article h3,
   section.bottom  div.main article p,
@@ -175,19 +200,11 @@ section.bottom div.left-side {
   }
 
 
-section.bottom  div.right-side {
-    grid-column: 5 / 5;
-    background-color: #858688;
-    height: 100%;
-    width: 100%;
-    min-width: 190px;
-  }
-
 
 
 footer {
     width: 100%;
-    height: 70px;
+    height: 10%;
     display: flex;
     justify-content: space-between;
     align-items: center;
